Adds the seperate activities and buttons on main for devs to work on

--- a/Lifter/app/src/main/res/values/strings.xml
+++ b/Lifter/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Lifter</string>
+    <string name="calendar_button">Calendar</string>
+    <string name="survey_button">Survey</string>
+    <string name="progress_button">Progress</string>
+    <string name="chat_button">Chat</string>
+    <string name="workout_button">Workout</string>
 </resources>
