--- a/Lifter/app/src/main/res/values/strings.xml
+++ b/Lifter/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="progress_button">Progress</string>
     <string name="chat_button">Chat</string>
     <string name="workout_button">Workout</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="chat_fragment">Chat Fragment</string>
+    <string name="groups_fragment">Groups Fragment</string>
+    <string name="contacts_fragment">Contacts Fragment</string>
 </resources>
