--- a/Lifter/app/src/main/res/values/strings.xml
+++ b/Lifter/app/src/main/res/values/strings.xml
@@ -11,4 +11,17 @@
     <string name="chat_fragment">Chat Fragment</string>
     <string name="groups_fragment">Groups Fragment</string>
     <string name="contacts_fragment">Contacts Fragment</string>
+    <string name="email_hint">Email</string>
+    <string name="password_hint">Password</string>
+    <string name="forget_password_link_text">Forget Password?</string>
+    <string name="login_button_text">Login</string>
+    <string name="register_link_text">Register</string>
+    <string name="register_button_text">Create Account</string>
+    <string name="already_have_an_account_link">Already have an account?</string>
+    <string name="find_workout_buddies_option_text">Find Workout Buddies</string>
+    <string name="settings_option_text">Settings</string>
+    <string name="logout_option_text">Logout</string>
+    <string name="username_settings_text">Username</string>
+    <string name="current_gym_text">Current Gym</string>
+    <string name="update_settings_button_text">Update Settings</string>
 </resources>
