--- a/Lifter/app/src/main/res/values/strings.xml
+++ b/Lifter/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="recent_message_text">Most recent message</string>
     <string name="contact_name_text">Contact name</string>
     <string name="to_do">TODO</string>
+    <string name="find_a_gym_buddy">Find a gym buddy</string>
 </resources>
