add suggest event in calendar

--- a/Lifter/app/src/main/res/values/strings.xml
+++ b/Lifter/app/src/main/res/values/strings.xml
@@ -14,5 +14,8 @@
 
     <string name="event_name">Event name</string>
     <string name="save">Add Event</string>
+    <string name="add_suggest_event">Suggest Event</string>
+    <string name="what_days_do_you_want_exercise">What days do you want exercise ?</string>
+
 
 </resources>
