--- a/Lifter/app/src/main/res/values/strings.xml
+++ b/Lifter/app/src/main/res/values/strings.xml
@@ -47,4 +47,7 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="created_at" />
+
+    <string name="exercise">It’s time to exercise</string>
+    <string name="notification_des">You have to do %1$s at %2$s</string>
 </resources>
